--- a/document.tex
+++ b/document.tex
@@ -4,16 +4,34 @@
 
 \begin{document}
 
+Gaze supported hand gesture interaction with Robot in mobile situations
 
-\section{Title}
+\section{Abstract}
+\section{Introduction}
+%We should clearify that this paper does not contribute in the hand gesture recognition but it uses the gesture and gaze in
+% a mobile situation for controlling a robot.
+\section{Related Work}
+%Related work on mobile gaze-based interaction, and hand gesture interaction with robot
+\section{Combining gaze and gesture}
+\subsection{Gaze for Interaction}
+%methods and limitations
+\subsection{Gesture for Interaction}
+%
+\subsection{Gaze enhansed interaction }
+%Pehaps different methods or modes that has been studied in our case
+\section{Applications}
+%Pehaps here we  can talk about different applications and then focued on our example in the next section
+\subsection{Experimental example}
+\subsubsection{}
+%Hardware and softwares and the environment of our application
 
-\subsection{Subtitle}
+\subsubsection{}
+%Different gestures, defining the method and steps
+\subsubsection{Results}
 
-Plain text.
-
-\subsection{Another subtitle}
+\section{Conclusion}
 
 More plain text.
-
+\section{References}
 
 \end{document}
