--- a/document.tex
+++ b/document.tex
@@ -121,6 +121,7 @@ be offered as poster presentations instead.
 %Related work on mobile gaze-based interaction, and hand gesture interaction with robot
 \textbf{Combining gaze and gesture}
 \textbf{Gaze for Interaction}
+Point to demo video: \url{http://www.youtube.com/watch?v=tBOfvZboGfk}
 %methods and limitations
 \textbf{Gesture for Interaction}
 %
