--- a/library.bib
+++ b/library.bib
@@ -2149,3 +2149,30 @@ url = {http://dl.acm.org/ft\_gateway.cfm?id=636795\&type=html},
 volume = {46},
 year = {2003}
 }
+
+@inproceedings{Mardanbegi2011,
+ author = {Mardanbegi, Diako and Hansen, Dan Witzner},
+ title = {Mobile gaze-based screen interaction in 3D environments},
+ booktitle = {Proceedings of the 1st Conference on Novel Gaze-Controlled Applications},
+ series = {NGCA '11},
+ year = {2011},
+ isbn = {978-1-4503-0680-5},
+ location = {Karlskrona, Sweden},
+ pages = {2:1--2:4},
+ articleno = {2},
+ numpages = {4},
+ url = {http://doi.acm.org/10.1145/1983302.1983304},
+ doi = {10.1145/1983302.1983304},
+ acmid = {1983304},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {domotics, gaze-based interaction, head-mounted eye tracker, screen interaction},
+} 
+
+@article{gazetrackinglassesandhandgesturerecognitionVideo,
+annote = {$\backslash$url\{http://www.youtube.com/watch?v=tBOfvZboGfk}},
+author = {Rozado, David and Mardanbeigi, Diako and Hales, Jeremy},
+journal = {Youtube},
+title = {{Interacting with Objects in the Environment by Gaze and Hand Gestures}},
+year = {2013}
+}
