Adding to methodology

--- a/document.tex
+++ b/document.tex
@@ -142,6 +142,23 @@ will react to the hand gesture.
 \textbf{
 \begin{center}
 Method
+Constructing the eye tracking glasses:
+
+Materials:
+Plastic safety glasses
+Wireless camera with infra-red LEDs (eye camera)
+Wireless camera	(scene camera)
+Tin strips
+Araldite
+Steel wire
+Tape
+Double sided tape
+9V battery
+Tin snips
+
+1. 
+
+
 \end{center}
 }
 
