Updated construction of glasses.

--- a/document.tex
+++ b/document.tex
@@ -156,7 +156,19 @@ Double sided tape
 9V battery
 Tin snips
 
-1. 
+1. An area was traced onto the lens of the glasses where the eyes will be approximately when the user puts on the safety googles. 
+2. Using the tin snips, the plastic part of the lenses bounded by the previously traced area was cut away. It is important that the
+majority of the structure of the glasses is left intact to allow for stability.
+3. Tin was cut to the size and shape of the infrared camera using the tin snips.
+4. Steel wire was cut to a size of 25cm.
+5. The steel wire was then attached to piece of tin using araldite.
+6. Using double sided tape, the tin was attached to the back of the camera.
+7. The steel wire was then bent into an 'L' shape and attached to the right side of the glasses (frame) using tape.
+8. The wires for the battery were extended and the 9V battery was attached to the left side of the glasses to ensure that the glasses
+are not unevenly balanced.
+8. Using the haytham software, the position of the camera was checked to ensure the camera feed is filming the entire eye.
+It was found that the best position of the eye is below the glasses so it doesn't obstruct the user's vision. 
+8. The scene camera was mounted to the right of side of the glasses using sticky tape.
 
 
 \end{center}
